--- a/Web Interface/style.css
+++ b/Web Interface/style.css
@@ -104,7 +104,8 @@ body {
     line-height: 1;
     font-size: 14px;
     -webkit-font-smoothing: antialiased;
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background: #f4f7f9;
 }
 
 ol,
@@ -152,7 +153,7 @@ img {
     margin: 0 auto;
 }
 
-.btn{
+.btn {
     display: inline-block;
     height: 50px;
     line-height: 50px;
@@ -162,16 +163,28 @@ img {
     background: #316aff;
     text-transform: uppercase;
     letter-spacing: 1px;
+    transition: 200ms all;
+}
+
+.btn.color-green {
+    background: #36855b;
+}
+
+.btn:hover {
+    transform: scale(1.04);
 }
 
 .header {
     background-color: #141618;
+    position: sticky;
+    top: 0;
+    z-index: 10;
 }
 
 .header .container {
     display: flex;
     align-items: center;
-    height:60px;
+    height: 60px;
 }
 
 .header .logo {
@@ -179,13 +192,13 @@ img {
 }
 
 .header .menu ul li a {
-    color: rgba(255,255,255, .6);
+    color: rgba(255, 255, 255, .6);
     height: 60px;
     display: flex;
     align-items: center;
 }
 
-.header .menu ul li a i{
+.header .menu ul li a i {
     margin-right: 10px;
 }
 
@@ -204,17 +217,22 @@ img {
     height: 34px;
     width: 250px;
     background-color: #21252d;
-    padding:0 10px;
+    padding: 0 10px;
     color: #fff;
 }
 
 .header .search input::placeholder {
-    color: rgba(255,255,255, .6);
+    color: rgba(255, 255, 255, .6);
+}
+
+.header .search input:focus::placeholder{
+    opacity:0;
+    transition:200ms opacity;
 }
 
 .header .search button {
     width: 32px;
-    height:34px;
+    height: 34px;
     background: #21252d;
     color: #fff;
     cursor: pointer;
@@ -222,14 +240,14 @@ img {
 }
 
 .header .search button:hover {
-    background:#316aff;
+    background: #316aff;
 }
 
-.header .login-buttons ul{
+.header .login-buttons ul {
     display: flex;
 }
 
-.header .login-buttons ul li{
+.header .login-buttons ul li {
     margin-left: 15px;
 }
 
@@ -237,52 +255,65 @@ img {
     height: 34px;
     display: block;
     line-height: 34px;
-    color: rgba(255,255,255,0.8);
+    color: rgba(255, 255, 255, 0.8);
 }
 
-.header .login-buttons ul li a:hover{
+.header .login-buttons ul li a:hover {
     color: #fff;
 }
 
-.header .login-buttons ul li.join-now-btn a{
-    background:#36855b;
+.header .login-buttons ul li.join-now-btn a {
+    background: #36855b;
     border-radius: 4px;
     padding: 0 15px;
+    color: #fff;
 }
 
 
 /* **Banner Section */
 
 .banner {
-    background:linear-gradient(170deg,#212A39,#181E28);
+    background: linear-gradient(170deg, #212A39, #181E28);
 }
 
-.banner .container{
-    min-height:50vh;
-    display:flex;
+.banner .container {
+    min-height: 50vh;
+    display: flex;
     padding: 70px 0;
     align-items: center;
 }
 
 .banner .container .banner-box {
-    width:50%;
+    width: 50%;
+}
+
+.banner .container .banner-box .banner-image a{
+    transition:200ms transform;
+    display: block;
 }
 
 .banner .container .banner-box img {
     max-width: 100%;
+    transition:200ms transform;
+}
+
+.banner .container .banner-box .banner-image a:hover{
+    transform:scale(1.04);
+    display: block;
 }
 
 .banner .container .banner-box.banner-image {
     padding-left: 150px;
 }
 
-.banner .container .banner-box h1{
+.banner .container .banner-box h1 {
     font-size: 48px;
     color: #fff;
     line-height: 56px;
+    font-weight: 500;
 }
 
-.banner .container .banner-box h2{
+.banner .container .banner-box h2 {
     font-size: 24px;
     color: #b0b6be;
     margin-top: 10px;
@@ -290,4 +321,246 @@ img {
 
 .banner .container .banner-box .btn {
     margin-top: 65px;
+}
+
+
+/*  ** section1 */
+
+.section1 {
+    display: flex;
+    align-items: center;
+    padding: 120px 0 100px;
+}
+
+.section1 .lang {
+    display: flex;
+    width: 392px;
+    min-width: 392px;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.section1 .lang a {
+    width: 184px;
+    height: 184px;
+    background: #fff;
+    border-radius: 4px;
+    margin-bottom: 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 5px 15px -5px rgba(0, 0, 0, .1);
+    transition: 200ms all;
+}
+
+.section1 .lang a:hover {
+    transform: scale(1.04);
+}
+
+.section1 .lang a img {
+    margin-bottom: 20px;
+    height: 40px;
+}
+
+.section1 .lang a .title {
+    font-size: 18px;
+    color: #111;
+}
+
+.section1 .inner {
+    padding-left: 160px;
+}
+
+.section1 .inner h3 {
+    font-size: 36px;
+    color: #111;
+    margin-bottom: 30px;
+}
+
+.section1 .inner p {
+    font-size: 18px;
+    margin-bottom: 20px;
+    line-height: 28px;
+}
+
+/*  **section 2*/
+
+.section2 {
+    background: #fff;
+    box-shadow: 0 5px 15px -5px rgba(0, 0, 0, .1);
+    padding: 64px 96px;
+    display: flex;
+    border-radius: 4px;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 100px;
+}
+
+.section2 .icon {
+    width: 56px;
+    height: 56px;
+    border-radius: 50%;
+    background: #f4f5f9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #d7dbe7;
+    font-size: 22px;
+    margin-bottom: 32px;
+}
+
+.section2 p {
+    font-size: 22px;
+    line-height: 36px;
+    font-family: georgia, times, serif;
+    /* font: 22px/36px georgia,times,serif; Kısayol olarak sırasıyla font-size, line-height ve font-family'i bu şekilde de yazabiliriz */
+    max-width: 60%;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.section2 .user {
+    display: flex;
+    align-items: center;
+    color: rgba(0, 0, 0, .7);
+}
+
+.section2 .user img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 8px;
+}
+
+/* ** section 3*/
+
+.section3 {
+    display: flex;
+    padding: 0 30px;
+}
+
+.section3>div {
+    width: 50%;
+    min-width: 50%;
+}
+
+.section3 .text h3 {
+    font-size: 36px;
+    margin-bottom: 30px;
+}
+
+.section3 .text p {
+    font-size: 18px;
+    line-height: 28px;
+    color: #111;
+}
+
+.section3 .text .btn {
+    margin-top: 50px;
+}
+
+.section3 .image img {
+    width: 100%;
+    align-items: center;
+}
+
+
+/* **footer */
+.footer {
+    background: #141618;
+}
+
+.footer .container {
+    padding: 80px 0;
+    display: flex;
+    flex-direction: column;
+}
+
+.footer .logo {
+    margin-bottom: 20px;
+}
+
+.footer .footer-nav {
+    display: flex;
+}
+
+.footer .footer-nav nav {
+    margin-right: 32px;
+}
+
+.footer .footer-nav nav h6 {
+    letter-spacing: 1.2px;
+    color: #fff;
+    margin-bottom: 15px;
+}
+
+.footer .footer-nav nav ul li {
+    margin-bottom: 5px;
+}
+
+.footer .footer-nav nav ul li a {
+    display: block;
+    font-size: 16px;
+    line-height: 150%;
+    color: rgba(255, 255, 255, .5);
+    transition: 200ms color;
+}
+
+.footer .footer-nav nav ul li a:hover {
+    color: #fff;
+}
+
+.footer .footer-nav .search {
+    margin-left: auto;
+}
+
+.footer .footer-nav .search h6 {
+    font-size: 20px;
+    color: #fff;
+    margin-bottom: 16px;
+}
+
+.footer .footer-nav .search form {
+    display: flex;
+    border-radius: 4px;
+    overflow: hidden;
+}
+
+.footer .footer-nav .search input {
+    height: 48px;
+    width: 375px;
+    background: #21252d;
+    padding: 0 15px;
+    color: #fff;
+}
+
+.footer .footer-nav .search button {
+    width: 48px;
+    height: 48px;
+    background: #316aff;
+    color: #fff;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.footer .copyright {
+    padding-top: 25px;
+    margin-top: 25px;
+    border-top: 1px solid rgba(255, 255, 255, .05);
+    color: rgba(255, 255, 255, .5);
+}
+
+.footer .copyright a{
+    margin-right: 10px;
+    color: rgba(255, 255, 255, .5);
+    transition: 200ms color;
+}
+
+.footer .copyright a:hover{
+    color: #fff;
+}
+
+.footer .copyright .text{
+    margin-left: 10px;
 }
