--- a/Basic Dashboards/style.css
+++ b/Basic Dashboards/style.css
@@ -1,3 +1,9 @@
+:root {
+    --color: #4c52bc;
+}
+
+
+
 html,
 body,
 div,
@@ -181,7 +187,7 @@ body {
 
 .sidebar {
     width: 252px;
-    background: #4c52bc;
+    background: var(--color);
     display: flex;
     flex-direction: column;
 }
@@ -247,7 +253,7 @@ body {
     width: 100%;
     height: 6px;
     border-radius: 6px;
-    background: #30358a;
+    background: rgba(0, 0, 0, .3);
     margin-top: 12px;
 }
 
@@ -267,6 +273,7 @@ body {
 .content .inner {
     flex: 1;
     padding: 32px 65px;
+    overflow: auto;
 }
 
 .content .inner .search {
@@ -316,12 +323,12 @@ body {
 
 .content .content-title::before {
     content: '';
-    width:38px;
-    height:4px;
+    width: 38px;
+    height: 4px;
     background-color: #c4e2e6;
     border-radius: 4px;
     position: absolute;
-    bottom:-2px;
+    bottom: -2px;
     left: 0;
 }
 
@@ -339,6 +346,185 @@ body {
 .content .content-title a i {
     font-size: 11px;
     margin-left: 4px;
+}
+
+.content .inner .inner-box .projects {
+    display: flex;
+    margin: 0 -7px;
+}
+
+.content .inner .inner-box .box {
+    flex: 1;
+    margin: 0 7px;
+    height: 145px;
+    border-radius: 12px;
+    box-sizing: border-box;
+}
+
+.content .inner .inner-box .box.active {
+    background-color: #f7f8fb;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.content .inner .inner-box .box.active .box-top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.content .inner .inner-box .box.active .box-top i {
+    color: #fbd199;
+    font-size: 24px;
+}
+
+.content .inner .inner-box .box.active .box-top .box-shared {
+    display: flex;
+}
+
+.content .inner .inner-box .box.active .box-top .box-shared img {
+    width: 20px;
+    height: 20px;
+    margin-left: -10px;
+    border: 2px solid #f7f8fb;
+    border-radius: 20px;
+}
+
+.content .inner .inner-box .box.active .box-title {
+    display: flex;
+    flex-direction: column;
+    padding: 12px 0;
+}
+
+.content .inner .inner-box .box.active .box-title .name {
+    font-size: 14px;
+    font-weight: 500;
+    color: #0e1b42;
+    padding-bottom: 4px;
+}
+
+.content .inner .inner-box .box.active .box-title .task {
+    font-size: 12px;
+    color: #8186ad;
+    margin-bottom: 12px;
+}
+
+.content .inner .inner-box .box.active .box-bar {
+    width: 100%;
+    height: 5px;
+    background-color: #dde2ef;
+    border-radius: 5px;
+}
+
+.content .inner .inner-box .box.active .box-bar span {
+    width: auto;
+    height: 5px;
+    background-color: var(--color);
+    border-radius: 5px;
+    position: relative;
+    display: block;
+}
+
+.content .inner .inner-box .box.active .box-bar span::before {
+    content: attr(title);
+    position: absolute;
+    top: -15px;
+    font-size: 10px;
+    color: #4c4c4c;
+    right: -6px;
+}
+
+.content .inner .inner-box .box.empty {
+    border: 2px dashed #c4e2f6;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.content .inner .inner-box .box.empty i {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #f7f8fb;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 10px;
+    color: var(--color);
+}
+
+.content .inner .inner-box .box.empty .text {
+    font-size: 12px;
+    color: #132046;
+}
+
+.content .inner .inner-box .recents ul li {
+    height: 64px;
+    display: flex;
+    align-items: center;
+}
+
+.content .inner .inner-box .recents ul li:hover {
+    background: #f4f5fa;
+    border-radius: 10px;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+.content .inner .inner-box .recents ul li:hover .more {
+    opacity: 1;
+}
+
+.content .inner .inner-box .recents ul li a.link {
+    flex: 1;
+    font-size: 14px;
+    color: #0e1b42;
+    display: flex;
+    align-items: center;
+}
+
+.content .inner .inner-box .recents ul li a.link i.fa-folder {
+    font-size: 30px;
+    color: #fbd199;
+    margin-right: 10px;
+}
+
+.content .inner .inner-box .recents ul li a.link i.icon {
+    width: 30px;
+    height: 30px;
+    background: var(--color);
+    border-radius: 6px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    margin-right: 10px;
+}
+
+.content .inner .inner-box .recents ul li a.link img {
+    width: 30px;
+    height: 30px;
+    border-radius: 6px;
+    margin-right: 10px;
+}
+
+.content .inner .inner-box .recents ul li .visibility,
+.content .inner .inner-box .recents ul li .size,
+.content .inner .inner-box .recents ul li .more {
+    font-size: 12px;
+    color: #8186ad;
+    width: 100px;
+    text-align: center;
+}
+
+.content .inner .inner-box .recents ul li .more {
+    text-align: right;
+    opacity: 0;
+    font-size: 16px;
+    color: #b1b4ce;
 }
 
 .content .rightbar {
