--- a/Basic Dashboards/style.css
+++ b/Basic Dashboards/style.css
@@ -607,8 +607,8 @@ body {
 
 .rightbar .activities-section .activity-1 i {
     color: #B1B4CE;
-    display:left;
-    align-items:flex-start;
+    display: left;
+    align-items: flex-start;
     justify-content: flex-start;
 }
 
@@ -622,6 +622,7 @@ body {
     width: 188px;
     font-size: 12px;
     color: #0E1B42;
+    margin-top: 12px;
 }
 
 
@@ -630,67 +631,157 @@ body {
     height: 15px;
     font-size: 11px;
     color: #8186AD;
+    margin-top: 12px;
     display: flex;
     align-items: right;
     justify-content: right;
 }
 
-.rightbar .activities-section .activity-1 .images {
-    width: 124px;
-    height: 44px;
-}
-
-.rightbar .activities-section .activity-1 .images img {
-    margin-left :60px;
+.rightbar .activities-section .activity-1 img {
     border-radius: 6px;
+    width: 58px;
+    height: 44px;
+    margin-left: 70px;
     display: flex;
+    float: left;
+    align-items: center;
+    justify-content: center;
+}
+
+.rightbar .activities-section .activity-1 img{
     
+    margin-top: 12px;
+}
+.rightbar .activities-section .activity-1 img.images-2 {
+    margin-left: 8px;
+    margin-top: 12px;
+}
+
+.rightbar .activities-section .activity-2 {
+    width: 260px;
+    height: 36px;
+}
+
+.rightbar .activities-section .activity-2 i.fa-circle-dot {
+    color: #F8D9AF;
+}
+
+.rightbar .activities-section .activity-2 p {
+    font-size: 12px;
+    align-items: left;
+    justify-content: center;
+}
+
+.rightbar .activities-section .activity-2 .content p.not-1 {
+    width: 188px;
+    font-size: 12px;
+    color: #0E1B42;
+    margin-top: 12px;
 }
 
 
-
-
-
-
-
-
-
-
-/* 
-
-.content .rightbar .card {
-    margin: 30px;
-}
-
-
-
-.content .content-title h4 {
-    font-size: 20px;
-    color: #0e1b42;
-    font-weight: 500;
-    margin: 30px;
-}
-
-.content .rightbar .card .activities {
+.rightbar .activities-section .activity-2 .content p.not-2 {
+    width: auto;
+    height: 15px;
+    font-size: 11px;
+    color: #8186AD;
     display: flex;
-    margin: 0 7px;
-    background-color: #f7f8fb;
-    padding: 20px;
-    flex-direction: column;
-    justify-content: space-between;
+    align-items: right;
+    justify-content: right;
+    margin-top: 12px;
 }
 
-.content .rightbar .rightbar-dot {
+.rightbar .activities-section .activity-3 {
+    width: 260px;
+    height: 36px;
+}
+
+.rightbar .activities-section .activity-3 i.fa-circle-dot {
+    color: #C4E2E6;
+}
+.rightbar .activities-section .activity-3 p {
+    font-size: 12px;
+}
+
+.rightbar .activities-section .activity-3 .content p.not-1 {
+    width: 188px;
+    font-size: 12px;
+    color: #0E1B42;
+    margin-top: 12px;
+}
+
+.rightbar .activities-section .activity-3 .content p.not-2 {
+    width: auto;
+    height: 15px;
+    font-size: 11px;
+    color: #8186AD;
     display: flex;
-    flex-direction: column;
+    align-items: right;
+    justify-content: right;
+    margin-top: 12px;
 }
 
-.content .rightbar .activities i.fa-circle-dot {
-    color: #8186ad;
+.rightbar .activities-section .activity-4 {
+    width: 261px;
+    height: 36px;
 }
 
-.content .rightbar .card .rigtbar-photo img {
-    width: 48px;
-    height: 48px;
-    border-radius: 4px;
-} */
+.rightbar .activities-section .activity-4 i.fa-circle-dot {
+    color: #F98E73;
+}
+.rightbar .activities-section .activity-4 p {
+    font-size: 12px;
+}
+
+.rightbar .activities-section .activity-4 .content p.not-1 {
+    width: 188px;
+    font-size: 12px;
+    color: #0E1B42;
+    margin-top: 12px;
+}
+
+.rightbar .activities-section .activity-4 .content p.not-2 {
+    width: auto;
+    height: 15px;
+    font-size: 11px;
+    color: #8186AD;
+    display: flex;
+    align-items: right;
+    justify-content: right;
+    margin-top: 12px;
+}
+
+.rightbar .refer-friend-card{
+    padding:50px;
+    margin-top: 50px;
+    width: 260px;
+    height: 260px;
+}
+
+.rightbar .refer-friend-card h4.card{
+    padding:10px;
+    font-size: 16px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.rightbar .refer-friend-card .text{
+    font-size: 12px;
+    padding:5px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.rightbar .refer-friend-card img.photos {
+    padding:5px;
+    border-radius: 10px;
+    margin-left: 48px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
