--- a/Demo & Download/style.css
+++ b/Demo & Download/style.css
@@ -1,25 +1,105 @@
 * {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-    border: none;
-    text-decoration: none;
-    box-sizing: border-box;
-    -webkit-overflow-scrolling: touch;
-    font-family: 'Nunito', sans-serif;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  border: none;
+  text-decoration: none;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-overflow-scrolling: touch;
+  font-family: 'Nunito', sans-serif;
 }
 
 html,
 body {
-    height: 100%;
+  height: 100%;
 }
 
 body {
-    background: #0f0f1b;
-    display: grid;
-    place-items: center;
+  background: #0f0f1b;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
 }
 
+.component--pricing-list {
+  text-align: center;
+}
+
+.component--pricing-list header {
+  margin-bottom: 80px;
+}
+
+.component--pricing-list header h3 {
+  font-size: 26px;
+  font-weight: bold;
+  color: #fff;
+  margin-bottom: 15px;
+}
+
+.component--pricing-list header p {
+  margin: o auto;
+  font-size: 18px;
+  color: #fff;
+  line-height: 22px;
+  max-width: 460px;
+}
+
+.component--pricing-list .pricing-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0 -10px;
+}
+
+.component--pricing-list .pricing-list li {
+  width: 265px;
+  margin: 0 10px;
+}
+
+.component--pricing-list .pricing-list li a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 35px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  height: 267px;
+  background: #171727;
+  border-radius: 20px;
+  color: #fff;
+  text-align: left;
+}
+
+.component--pricing-list .pricing-list li a .title {
+  font-size: 22px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.component--pricing-list .pricing-list li a .price {
+  font-size: 26px;
+  font-weight: bold;
+}
+
+.component--pricing-list .pricing-list li a .price span {
+  display: block;
+  font-size: 16px;
+  font-weight: normal;
+}
+
+.component--pricing-list .pricing-list li a .btn {
+  font-size: 16px;
+  margin-top: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+/* 
 .component--pricing-list {
     text-align: center;
 }
@@ -101,3 +181,5 @@ body {
     display: flex;
     margin-left: 10px;
 }
+ */
+/*# sourceMappingURL=style.css.map */
